# Backend

./: .editorconfig  DockerFile  docker-compose.yml  pyproject.toml  requirements.txt  server.py  setup.cfg  storage.py
shop/: __main__.py  app.py  categoryStorage.py  db.py  dbmodels.py  errors.py  models.py  schemas.py  server.py  sqlstorage.py  storage.py  usersstorage.py
shop/database/: db.py
shop/views/: categories.py  models.py  models_old.py  users.py
