[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dmitriy Volynkin <volynkin-da@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flake8 = "^4.0.1"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
